hard-gists/8179471/run.log
=== Docker Run Log for 8179471 ===
Started at: Mi 29. Okt 17:40:52 CET 2025

[2025-10-29 17:40:53] START: Running container for 8179471
[2025-10-29 17:40:53] SUCCESS: Container 00ece0e5d07b1971b8940edae560437fa4aa05aed1ea94c1593b8a8ecc39e4df started for 8179471
=== Container logs for 8179471 ===
  File "/snippet.py", line 38
    except MySQLdb.OperationalError, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 8179471 ===
[2025-10-29 17:40:55] INFO: Container 00ece0e5d07b1971b8940edae560437fa4aa05aed1ea94c1593b8a8ecc39e4df has stopped
